Fix images overflowing

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -1,3 +1,7 @@
+.tmpl-post > * {
+  max-width: 100%;
+}
+
 p:last-child {
   margin-bottom: 0;
 }
